Realized I cannot get rid of gutters on landscape mode because FAANG companies have the same thing on their mobile sites, but I do need to make the gutters blend in. Also set the html and body tags back to no set width because it made the page too wide. I think this will solve everything. Fingers crossed.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,12 +6,12 @@
 ///////////*/
 
 html, body {
-  width: 100vw;
   margin: 0;
+  background-color: var(--blue);
 }
 
 .App {
-  width: 100%;
+  width: 100vw;
   margin: 0;
 }
 
